i hate the svg clip path bug but NOW, the gradient shows up on mobile

--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -20,23 +20,25 @@ body {
 
 /* hidden div so that the audio controls can be moved anywhere on the whole screen */
 .screen {
-  position: fixed;
+  /* position: fixed; */
   top: 6em; /* Set top to the height of the header */
   left: 0;
   width: 100%;
-  height: calc(100% - 6em); /* Set height to remaining space below the header */
+  /* height: calc(100% - 6em); Set height to remaining space below the header */
+  height: 100%;
   z-index: 0;
   width: 100%;
+  overflow: hidden;
 }
 
 .info-section {
   position: absolute;
-  top: 45%;
+  top: 52%;
   left: 40%;
   transform: translate(-90%, -50%);
   padding: 10px;
   width: 23em;
-  z-index: 1;
+  z-index: 500;
 }
 
 h1 {
@@ -69,7 +71,7 @@ h2 {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  width: 18em;
+  width: 19em;
 }
 
 h3 {
@@ -136,27 +138,16 @@ a {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.23);
 }
 
-#gradient-canvas {
-  width: 100%;
-  height: 60vh;
-  --gradient-color-1: #1cc6ff;
-  --gradient-color-2: #43ffd2;
-  --gradient-color-3: #5433ff;
-
-  position: absolute;
-  bottom: 0;
-
-  clip-path: url(#my-clip-path);
-  animation: gradient-animation 2000ms ease-in forwards;
-}
-
 .audio-visualizer {
-  display: flex;
+  position: fixed;
+  /* display: flex; */
   flex-direction: column;
   border: #000;
-  height: 50vh;
+  height: 30%;
   width: 100vw;
   overflow: hidden;
+  z-index: 400;
+  /* visibility: visible; */
 }
 
 .audio-visuals {
@@ -221,17 +212,14 @@ button:hover {
 canvas {
   border: #000;
   overflow: hidden;
-  /* width: 100%;
-  height: 100%; */
   margin: 0;
   padding: 0;
-  display: block;
+  /* display: block; */
   /* object-fit: contain; */
 }
 
-.isLoaded {
-  height: 0%;
-  width: 0%;
+.mobile-text {
+  display: none;
 }
 
 .header-list {
@@ -253,6 +241,63 @@ canvas {
   width: 10em;
 }
 
+.canvas-wrapper {
+  width: 100%;
+
+  height: 88.4vh;
+  clip-path: url(#my-clip-path);
+  overflow: hidden;
+  bottom: 0;
+}
+
+#gradient-canvas {
+  width: 100%;
+  height: 100vh;
+  --gradient-color-1: #1cc6ff;
+  --gradient-color-2: #43ffd2;
+  --gradient-color-3: #5433ff;
+
+  /* position: absolute; */
+
+  /* clip-path: url(#my-clip-path); */
+  /* clip-path: polygon(
+    100% 0.1%,
+    100% 0.1%,
+    95.018% 12.606%,
+    87.987% 21.718%,
+    79.257% 28.203%,
+    69.178% 32.833%,
+    58.1% 36.375%,
+    46.374% 39.599%,
+    34.351% 43.275%,
+    22.381% 48.17%,
+    10.814% 55.056%,
+    0% 64.7%,
+    0% 100%,
+    100% 100%,
+    100% 0.1%
+  );
+  -webkit-clip-path: polygon(
+    100% 0.1%,
+    100% 0.1%,
+    95.018% 12.606%,
+    87.987% 21.718%,
+    79.257% 28.203%,
+    69.178% 32.833%,
+    58.1% 36.375%,
+    46.374% 39.599%,
+    34.351% 43.275%,
+    22.381% 48.17%,
+    10.814% 55.056%,
+    0% 64.7%,
+    0% 100%,
+    100% 100%,
+    100% 0.1%
+  ); */
+
+  animation: gradient-animation 2000ms ease-in forwards;
+}
+
 @keyframes gradient-animation {
   from {
     opacity: 0%;
@@ -264,6 +309,14 @@ canvas {
 
 /* Media Query for mobile */
 @media only screen and (max-width: 768px) {
+  .desktop-text {
+    display: none;
+  }
+
+  .mobile-text {
+    display: block;
+  }
+
   .header {
     width: 100%;
     display: flex;
